# nbody-gpu

./: Cargo.toml
src/: main.rs
src/bodies/: body.rs  mod.rs  utils.rs
src/shader/: compute.wgsl
src/wgpu_stuff/: framework.rs  mod.rs  sim.rs
src/wgpu_stuff/shader/: compute.wgsl
