[package]
name = "nbody-gpu"
version = "0.1.0"
edition = "2021"

[dependencies]
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }

fastrand = "2.1.1"
palette = "0.7.6"
pollster = "0.4.0"
bytemuck = { version = "1.18", features = ["derive"] }

parking_lot = "0.12.3"

winit = "0.29"

wgpu = "23.0.0"
flume = "0.11.0"

env_logger = "0.11.5"
log = "0.4.14"
